package com.inf4067.driver_cart.order.state;

public enum OrderState {
    CREATED,
    CONFIRMED,
    IN_PREPARATION,
    READY_FOR_DELIVERY,
    IN_DELIVERY,
    DELIVERED,
    CANCELLED
}
